Full handshake implemented. Still no support for view.

--- a/src/MiNET/MiNET.Network/MiNET.Network.csproj
+++ b/src/MiNET/MiNET.Network/MiNET.Network.csproj
@@ -39,8 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConnectedPackage.cs" />
     <Compile Include="IdOpenConnectionReply1.cs" />
-    <Compile Include="ProtocolBase.cs" />
+    <Compile Include="Int24.cs" />
+    <Compile Include="Package.cs" />
+    <Compile Include="DatagramHeader.cs" />
     <Compile Include="protocol.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
