Refactoring. Break out from the unit-tests and implemented a real server. Have to love TopShelf for creating native Windows Services in 5 min.

--- a/src/MiNET/MiNET.Network.Test/MiNET.Network.Test.csproj
+++ b/src/MiNET/MiNET.Network.Test/MiNET.Network.Test.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{672C13DD-9823-4DF2-9D1B-4895CC6B3CAC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MiNET.Network.Test</RootNamespace>
+    <RootNamespace>MiNET.Network</RootNamespace>
     <AssemblyName>MiNET.Network.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
