Multiplayer (finally). Ability to convert from MCPC Anvil formats to MCPE native wire-format, on the fly. So now I can use all the world-generateors already produced. Finally, infinit world support added with chunk-cache for each user to make sure we only load what is really needed. VERY fast.

--- a/src/MiNET/MiNET.Network/MiNET.Network.csproj
+++ b/src/MiNET/MiNET.Network/MiNET.Network.csproj
@@ -42,6 +42,7 @@
     <Compile Include="ChunkHelper.cs" />
     <Compile Include="ConnectedPackage.cs" />
     <Compile Include="ConnectionRequestAcceptedManual.cs" />
+    <Compile Include="CryptoRandom.cs" />
     <Compile Include="FlatGenerator.cs" />
     <Compile Include="IdOpenConnectionReply1.cs" />
     <Compile Include="Int24.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="NbtFormatException.cs" />
     <Compile Include="Package.cs" />
     <Compile Include="DatagramHeader.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="protocol.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
