--- a/src/MiNET/MiNET.Network/MiNET.Network.csproj
+++ b/src/MiNET/MiNET.Network/MiNET.Network.csproj
@@ -43,10 +43,12 @@
     <Compile Include="ChunkHelper.cs" />
     <Compile Include="ConnectedPackage.cs" />
     <Compile Include="ConnectionRequestAcceptedManual.cs" />
+    <Compile Include="CraftNetAnvilWorldProvider.cs" />
     <Compile Include="CraftNetWorldProvider.cs" />
     <Compile Include="CryptoRandom.cs" />
     <Compile Include="FlatlandWorldProvider.cs" />
     <Compile Include="MetadataInt.cs" />
+    <Compile Include="Nak.cs" />
     <Compile Include="OpenConnectionRequest1.cs" />
     <Compile Include="Int24.cs" />
     <Compile Include="ChunkColumn.cs" />
@@ -66,6 +68,7 @@
       <DependentUpon>protocol.tt</DependentUpon>
     </Compile>
     <Compile Include="RakNetIdentifiers.cs" />
+    <Compile Include="UnknownPackage.cs" />
     <Content Include="protocol.xml">
       <SubType>Designer</SubType>
     </Content>
