--- a/src/MiNET/MiNET.Network/MiNET.Network.csproj
+++ b/src/MiNET/MiNET.Network/MiNET.Network.csproj
@@ -40,24 +40,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ack.cs" />
-    <Compile Include="ChunkHelper.cs" />
+    <Compile Include="Blocks\Block.cs" />
+    <Compile Include="Blocks\BlockAir.cs" />
+    <Compile Include="Blocks\BlockFactory.cs" />
+    <Compile Include="Blocks\BlockWoodenDoor.cs" />
     <Compile Include="ConnectedPackage.cs" />
     <Compile Include="ConnectionRequestAcceptedManual.cs" />
-    <Compile Include="CraftNetAnvilWorldProvider.cs" />
-    <Compile Include="CraftNetWorldProvider.cs" />
-    <Compile Include="CryptoRandom.cs" />
-    <Compile Include="FlatlandWorldProvider.cs" />
-    <Compile Include="MetadataInt.cs" />
+    <Compile Include="Items\Item.cs" />
+    <Compile Include="Items\ItemBlock.cs" />
+    <Compile Include="Items\ItemDoor.cs" />
+    <Compile Include="Items\ItemFactory.cs" />
     <Compile Include="Nak.cs" />
     <Compile Include="OpenConnectionRequest1.cs" />
-    <Compile Include="Int24.cs" />
-    <Compile Include="ChunkColumn.cs" />
-    <Compile Include="IWorldProvider.cs" />
-    <Compile Include="Level.cs" />
     <Compile Include="MiNetServer.cs" />
-    <Compile Include="NbtBinaryReader.cs" />
-    <Compile Include="NbtBinaryWriter.cs" />
-    <Compile Include="NbtFormatException.cs" />
     <Compile Include="Package.cs" />
     <Compile Include="DatagramHeader.cs" />
     <Compile Include="Player.cs" />
@@ -69,6 +64,19 @@
     </Compile>
     <Compile Include="RakNetIdentifiers.cs" />
     <Compile Include="UnknownPackage.cs" />
+    <Compile Include="Utils\CryptoRandom.cs" />
+    <Compile Include="Utils\Int24.cs" />
+    <Compile Include="Utils\MetadataInt.cs" />
+    <Compile Include="Utils\NbtBinaryReader.cs" />
+    <Compile Include="Utils\NbtBinaryWriter.cs" />
+    <Compile Include="Utils\NbtFormatException.cs" />
+    <Compile Include="Worlds\ChunkColumn.cs" />
+    <Compile Include="Worlds\ChunkHelper.cs" />
+    <Compile Include="Worlds\CraftNetAnvilWorldProvider.cs" />
+    <Compile Include="Worlds\CraftNetWorldProvider.cs" />
+    <Compile Include="Worlds\FlatlandWorldProvider.cs" />
+    <Compile Include="Worlds\IWorldProvider.cs" />
+    <Compile Include="Worlds\Level.cs" />
     <Content Include="protocol.xml">
       <SubType>Designer</SubType>
     </Content>
