--- a/src/MiNET/MiNET.Network.Test/MiNET.Test.csproj
+++ b/src/MiNET/MiNET.Network.Test/MiNET.Test.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{672C13DD-9823-4DF2-9D1B-4895CC6B3CAC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MiNET.Network</RootNamespace>
-    <AssemblyName>MiNET.Network.Test</AssemblyName>
+    <RootNamespace>MiNET</RootNamespace>
+    <AssemblyName>MiNET.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -71,9 +71,9 @@
       <Project>{B415FC03-C6FB-4B20-A5A1-81F526ADFEF5}</Project>
       <Name>Craft.Net.TerrainGeneration</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MiNET.Network\MiNET.Network.csproj">
+    <ProjectReference Include="..\MiNET.Network\MiNET.csproj">
       <Project>{B7049BF1-2DB0-435D-9791-09AB61018685}</Project>
-      <Name>MiNET.Network</Name>
+      <Name>MiNET</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
