Added Craft.Net as submodule.

--- a/src/MiNET/MiNET.Service/MiNET.Service.csproj
+++ b/src/MiNET/MiNET.Service/MiNET.Service.csproj
@@ -55,6 +55,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MiNET\MiNET.csproj">
+      <Project>{B7049BF1-2DB0-435D-9791-09AB61018685}</Project>
+      <Name>MiNET</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
