Use forked craft.net

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,4 +2,4 @@
 
 	path = external/craft.net
 
-	url = https://github.com/SirCmpwn/Craft.Net.git
+	url = https://github.com/NiclasOlofsson/Craft.Net.git
