Optimization MAX. Can deal with 160 players with no lag at all (streaming positions at 20 moves/s. 400 users at world tick time around 400ms. Need to continue optimization, but now time to start adding functionality again.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -65,6 +65,7 @@
     <Compile Include="MiNetServer.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerPosition3D.cs" />
+    <Compile Include="Utils\Class1.cs" />
     <Compile Include="Utils\CryptoRandom.cs" />
     <Compile Include="Utils\Int24.cs" />
     <Compile Include="Utils\MetadataInt.cs" />
