--- a/src/MiNET/packages/repositories.config
+++ b/src/MiNET/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../MiNET.Service/packages.config" />
   <repository path="..\MiNET.Service\packages.config" />
   <repository path="..\MiNET.Test\packages.config" />
 </repositories>
