--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -97,6 +97,7 @@
     </Content>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ConfigParser.cs" />
+    <Compile Include="Items\ItemBucket.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Net\MCPE Protocol Documentation.md">
