--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Net\ConnectionRequestAcceptedManual.cs" />
     <Compile Include="Net\Datagram.cs" />
     <Compile Include="Net\DatagramHeader.cs" />
+    <Compile Include="Net\McpeMovePlayer.cs" />
     <Compile Include="Net\MessagePart.cs" />
     <Compile Include="Net\MessagePartHeader.cs" />
     <Compile Include="Net\Nak.cs" />
